Add initial app code

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using AwesomeWebApp
-@using AwesomeWebApp.Models
+﻿@using MyAwesomeWebApp
+@using MyAwesomeWebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
